document/kubernetes/hot-deals/officecenter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dse-opscenter
  namespace: hotdeals
spec:
  selector:
    app: dse-opscenter
  ports:
  - name: http
    port: 8888
    targetPort: 8888
